Fixed issue with image stretching and bad contact info.

--- a/services.html
+++ b/services.html
@@ -122,14 +122,14 @@
     <footer>
         <div id="contact-info">
         	<h3>Contact Info:</h3>
-            <p>
-           <a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike
-            <br/>Suite 104
+            <p>Super Smiles
+            <br /><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike, Suite 104
             <br/>Burlington, MA 01803</a></p>
             
             <p>781.272.1288 (phone)
             <!--<br/>123.456.7890 (fax)!-->
-            <br/><a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a></p>
+            <br/><a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
+            <br/><a href="index.html" alt="Super Smiles Burlington" title="Super Smiles Burlington">supersmilesburlington.com</a></p>
        </div>
         <div id="business-hours">
             <h3>Business Hours:</h3>
@@ -159,9 +159,8 @@
 <div id="hk-design">
     <p>WEBSITE DESIGN</p> 
         <a href="http://www.helenkimeria.com" alt="Website design by Helen Kimeria Design." title="Website design by Helen Kimeria Design." target="_blank">
-        	<p><img src="http://www.helenkimeria.com/hk-website-design-badges/super-smiles/images/HelenKimeria_LOGO.png" alt="Website design by Helen Kimeria. Helen Kimeria's Services: Graphic Design, Web Design, Visual Identity Design, Visual Branding, Creative Direction, Visual Communication Strategy, Illustration. Click here for Helen Kimeria's website." title="Website design by Helen Kimeria. Helen Kimeria's Services: Graphic Design, Web Design, Visual Identity Design, Visual Branding, Creative Direction, Visual Communication Strategy, Illustration. Click here for Helen Kimeria's website."/></p>
-        	<p>Helen Kimeria
-            <br/><span class="hk-services">Graphic Design</span><span class="plus">+</span><span class="hk-services">Web Design</span><span class="plus">+</span><span class="hk-services">Visual Identity Design</span><span class="plus">+</span><span class="hk-services">Creative Direction</span></p>
+        	<p><img src="http://www.helenkimeria.com/hk-website-design-badges/super-smiles/images/HelenKimeria_LOGO.png" alt="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website." title="Website design by Helen Kimeria. Helen Kimeria's services include Graphic Design, Web Design, Visual Identity Design and Illustration. Click here for Helen Kimeria's website."/></p>
+        	<p>Helen Kimeria</p>
         </a>
 </div>
 
