Fixed issues with Thursday start time being wrong.

--- a/about.html
+++ b/about.html
@@ -126,7 +126,7 @@
             <br/><span class="tab">Monday:</span> 10 a.m. - 4 p.m.
             <br/><span class="tab">Tuesday:</span> 10 a.m. - 4 p.m.
             <br/><span class="tab">Wednesday:</span> 10 a.m. - 8 p.m.
-            <br/><span class="tab">Thursday:</span> 12 p.m. - 8 p.m.
+            <br/><span class="tab">Thursday:</span> 10 a.m. - 8 p.m.
             <br/><span class="tab">Friday:</span> 10 a.m. - 5 p.m.
             <br/><span class="tab">Saturday:</span> 10 a.m. - 2 p.m.</p>
         </div>
