--- a/about.html
+++ b/about.html
@@ -128,7 +128,7 @@
             <br/><span class="tab">Wednesday:</span> 10 a.m. - 8 p.m.
             <br/><span class="tab">Thursday:</span> 10 a.m. - 8 p.m.
             <br/><span class="tab">Friday:</span> 10 a.m. - 5 p.m.
-            <br/><span class="tab">Saturday:</span> 10 a.m. - 2 p.m.</p>
+            <br/><span class="tab">Saturday:</span> By Appointment</p>
         </div>
         <div id="menu">
         	<h3>Menu:</h3>
