--- a/patient-resources.html
+++ b/patient-resources.html
@@ -148,7 +148,7 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
             <br/><span class="tab">Wednesday:</span> 10 a.m. - 8 p.m.
             <br/><span class="tab">Thursday:</span> 10 a.m. - 8 p.m.
             <br/><span class="tab">Friday:</span> 10 a.m. - 5 p.m.
-            <br/><span class="tab">Saturday:</span> 10 a.m. - 2 p.m.</p>
+            <br/><span class="tab">Saturday:</span> By Appointment</p>
         </div>
         <div id="menu">
         	<h3>Menu:</h3>
