--- a/index.html
+++ b/index.html
@@ -67,11 +67,11 @@
     <div id="content-area">
         <div id="main-content">
         	<article>
-                <h1>Welcome to Super Smiles</h1>
+                <h1>Welcome to Super Smiles Dental</h1>
                 <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
-                <p>At Super Smiles, we believe that maintaining a beautiful smile is essential to maintaining a healthy life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to make your visit as comfortable and personable as possible. Meanwhile, <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> has a gentle approach to your care that will make you feel at ease.  Dr. Miller provides <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive treatment plan and dental care options</a> to restore, improve, and brighten your smile <a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">within your budget.</a></p>
-                <p>We are <a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">conveniently located</a> a short distance away from the Burlington Mall and technology companies, allowing you to plan your visit around your scheduled meetings or shopping needs.</p>
-                <p>Dr. Miller and the staff at Super Smiles are here to ensure that you get the best, customized dental care you need.</p>
+                <p>At Super Smiles Dental, we believe that maintaining a beautiful smile is essential to maintaining a healthy life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to making your visit as comfortable and personable as possible. Meanwhile, <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> has a gentle approach to your care that will make you feel at ease.  Dr. Miller provides <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive treatment plan and dental care options</a> to restore, improve, and brighten your smile <a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">within your budget.</a></p>
+                <p>We are <a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">conveniently located</a> a short distance away from the Burlington Mall and technology companies, across the street from Trader Joes and Market Basket, allowing you to plan your visit around your scheduled meetings or shopping needs.</p>
+                <p>Dr. Miller and the staff of Super Smiles Dental are here to ensure that you get the best, customized dental care you need.  Make an appointment today to experience the superior quality of Super Smiles Dental!</p>
                 <h3 class="tagline">Super Smiles! Beautiful smiles for family, career, and life!</h3>
             </article>
         </div>
@@ -113,14 +113,14 @@
     <footer>
         <div id="contact-info">
         	<h3>Contact Info:</h3>
-            <p>Super Smiles
+            <p>Super Smiles Dental
             <br /><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike, Suite 104
             <br/>Burlington, MA 01803</a></p>
             
             <p>781.272.1288 (phone)
             <!--<br/>123.456.7890 (fax)!-->
             <br/><a href="mailto:info@supersmilesburlington.com" alt="For general inquiries, email us at info@supersmilesburlington.com" title="For general inquiries, email us at info@supersmilesburlington.com">info@supersmilesburlington.com</a>
-            <br/><a href="index.html" alt="Super Smiles Burlington" title="Super Smiles Burlington">supersmilesburlington.com</a></p>
+            <br/><a href="index.html" alt="Super Smiles Dental Burlington" title="Super Smiles Dental Burlington">supersmilesburlington.com</a></p>
        </div>
         <div id="business-hours">
             <h3>Business Hours:</h3>
