--- a/about.html
+++ b/about.html
@@ -66,11 +66,12 @@
         <div id="main-content">
         	<article>
 				<h1>Meet Dr. Miller</h1>
-				<span id="head-shot"><img src="images/staff/dr-miller-head-shot-200.jpg" /></span>
+				<div id="head-shot">
+					<img src="images/staff/dr-miller-head-shot-200.jpg" />
+				</div>
                 <p>Dr. Emilie Miller practiced in several locations in Massachusetts before establishing her own dental practice in Burlington, MA. Dr. Miller graduated Cum Laude from Boston University Goldman School of Dentistry in 2005 and started her dental career in underserved communities in Roxbury and Dorchester.  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.</p>
                 <p>Dr. Miller keeps her skills and knowledge up to date on advancements in general dentistry and dental technologies by regularly attending seminars that involve multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.</p>
-                <p>Dr. Miller grew up in Montreal, Canada. In her spare time, she enjoys reading, hiking the White Mountains in New Hampshire, ballroom dancing and baking delicious desserts.
-</p>
+                <p>Dr. Miller grew up in Montreal, Canada. In her spare time, she enjoys reading, hiking the White Mountains in New Hampshire, ballroom dancing and baking delicious desserts.</p>
             </article>
         </div>
         
@@ -109,7 +110,7 @@
     </div>
     
     <footer>
-<div id="contact-info">
+		<div id="contact-info">
         	<h3>Contact Info:</h3>
             <p>Super Smiles Dental
             <br /><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">54 Middlesex Turnpike, Suite 104
