--- a/patient-resources.html
+++ b/patient-resources.html
@@ -82,15 +82,20 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
                 <p>Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may treat the pain or the problem immediately. She may also prescribe pain medicine to help you feel more comfortable until you receive definitive treatment.</p>
                 <h2>Dental Insurance</h2>
                 <p>We accept most major dental insurances, including: 
-                <ul>
-                	<li>Delta Dental</li>
-                    <li>Blue Cross Blue Shield</li>
-                    <li>MetLife</li>
-                    <li>MassHealth (Medicaid)</li>
-                </ul>
-                <p>We also participate with Universal Dental Plan. If you do not have dental insurance coverage or for any dental treatment not covered with your dental insurance plan, we will be happy to discuss financing options with you.</p>
+					<ul>
+						<li>Delta Dental</li>
+						<li>Blue Cross Blue Shield</li>
+						<li>MetLife</li>
+						<li>MassHealth (Medicaid)</li>
+						<li>And many others</li>
+					</ul>
+				</p>
+				<p>We also participate in the Universal Dental Plan.  If you do not see your insurance here, call or email us.  We most likely do accept your insurance.</p>
+                <p>If you do not have dental insurance or if your dental insurance plan does not cover any part of your dental treatment, we can help you identify the financing options available to you, and discuss which may be most appropriate for your particular needs.</p>
                 <h2>Scheduling</h2>
-                <p>To request an appointment, please call 781-272-1288 or email us at <a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>. Our associates will schedule your appointment as promptly as possible.</p>
+                <p>To request an appointment, please call:  781-272-1288</p>
+				<p>Or email us at: <a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>. </p>
+				<p>Our office will schedule your appointment as promptly as possible.</p>
             </article>
         </div>
        
