Restored headshot and team to about page.

--- a/about.html
+++ b/about.html
@@ -44,6 +44,7 @@
             <a href="contact-us.html" alt="Contact Us" title="Contact Us"><div class="main-nav">CONTACT US</div></a>
         </nav>
         <div id="slideshow">
+        	<img src='images/staff/slideshow/group-picture.jpg' alt="The Super Smiles Dental Team" title="The Super Smiles Dental Team" width="1024" height="440"/>
             <img src='images/staff/slideshow/lobby.jpg' alt="Comfortable Facilities" title="Comfortable Facilities" width="1024" height="440"/>			
 			<img src='images/staff/slideshow/hallway.jpg' alt="Modern Facilities" title="Modern Facilities" width="1024" height="440"/>
             <img src='images/staff/slideshow/op-3.jpg' alt="State of the Art Treatment Rooms" title="State of the Art Treatment Rooms" width="1024" height="440"/>
@@ -65,6 +66,9 @@
         <div id="main-content">
         	<article>
 				<h1>Meet Dr. Miller</h1>
+				<div id="head-shot">
+					<img src="images/staff/dr-miller-head-shot-200.jpg" />
+				</div>
                 <p>Dr. Emilie Miller practiced in several locations in Massachusetts before establishing her own dental practice in Burlington, MA. Dr. Miller graduated Cum Laude from Boston University Goldman School of Dentistry in 2005 and started her dental career in underserved communities in Roxbury and Dorchester.  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.</p>
                 <p>Dr. Miller keeps her skills and knowledge up to date on advancements in general dentistry and dental technologies by regularly attending seminars that involve multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.</p>
                 <p>Dr. Miller grew up in Montreal, Canada. In her spare time, she enjoys reading, hiking the White Mountains in New Hampshire, ballroom dancing and baking delicious desserts.</p>
