Updated website to use new elements.

--- a/contact-us.html
+++ b/contact-us.html
@@ -43,6 +43,11 @@
             <a href="patient-resources.html" alt="Patient Resources" title="Patient Resources"><div class="main-nav">PATIENT RESOURCES</div></a>
             <a href="contact-us.html" alt="Contact Us" title="Contact Us"><div class="active">CONTACT US</div></a>
         </nav>
+        
+        <div id="call">
+        	<h3>Call Today: <span class="phone"><a href="tel:7812721288">781.272.1288</a></span></h3>
+        </div>
+        
         <div id="slideshow">
         	<img src='images/universal/slideshow/GlassesMale_1024x440.jpg' alt="Conveniently located near the Burlington Mall." title="Conveniently located near the Burlington Mall." width="1024" height="440"/>
             <img src='images/universal/slideshow/YoungMale_1024x440.jpg' alt="Personalized and comprehensive dental care." title="Personalized and comprehensive dental care." width="1024" height="440"/>
@@ -68,6 +73,11 @@
             	<h2>Business Hours</h2>
                 <div id="includeHours"></div>
         		<h2>Conveniently Located Near the Burlington Mall</h2>
+                <h3>Directions:</h3>
+<p><span class="bold">From the North:</span> follow 128/95S exit 32A-32B for US-3 N/Middlesex Turnpike toward Lowell/Burlington. Follow exit 32B toward Middlesex Turnpike. Make a left turn on Middlesex Turnpike. The office is located on the right side, directly across from Trader Joe’s and Bed Bath and Beyond.</p>
+ 
+<p><span class="bold">From the South:</span> follow 95N, take exit 32A-32B for US-3 N toward Middlesex Turnpike/Burlington/Lowell. Keep left at the fork to continue onto exit 32B for Middlesex Turnpike. Make a left turn on Middlesex Turnpike. The office is located on the right side, directly across from Trader Joe’s and Bed Bath and Beyond next to Burger King.</p>
+
             	<div class="large-map">
             		<iframe width="550" height="350" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=39.320439,60.732422&amp;hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&amp;t=m&amp;ie=UTF8&amp;hq=&amp;ll=42.472793,-71.21295&amp;spn=0.022158,0.047207&amp;z=14&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&amp;hl=en&amp;sll=37.0625,-95.677068&amp;sspn=39.320439,60.732422&amp;hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&amp;t=m&amp;ie=UTF8&amp;hq=&amp;ll=42.472793,-71.21295&amp;spn=0.022158,0.047207&amp;z=14&amp;iwloc=A&amp;source=embed" style="color:#0000FF;text-align:left" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">View Larger Map</a></small>
             	</div>
