--- a/patient-resources.html
+++ b/patient-resources.html
@@ -43,6 +43,11 @@
             <a href="patient-resources.html" alt="Patient Resources" title="Patient Resources"><div class="active">PATIENT RESOURCES</div></a>
             <a href="contact-us.html" alt="Contact Us" title="Contact Us"><div class="main-nav">CONTACT US</div></a>
         </nav>
+        
+        <div id="call">
+        	<h3>Call Today: <span class="phone"><a href="tel:7812721288">781.272.1288</a></span></h3>
+        </div>        
+        
         <div id="slideshow">
         	<img src='images/universal/slideshow/Child_1024x440.jpg' alt="Comprehensive dental care for your entire family." title="Comprehensive dental care for your entire family." width="1024" height="440"/>
             <img src='images/universal/slideshow/YoungMale_1024x440.jpg' alt="Personalized and comprehensive dental care." title="Personalized and comprehensive dental care." width="1024" height="440"/>
