Removed reference to HK style sheet to fix performance from reference.

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
     <link href="css/reset.css" rel="stylesheet" type="text/css" />
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
-    <link href="http://www.helenkimeria.com/hk-website-design-badges/super-smiles/css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
+    <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
     
 </head>
 
