--- a/services-cosmetic.html
+++ b/services-cosmetic.html
@@ -11,6 +11,7 @@
     <link href='http://fonts.googleapis.com/css?family=Oxygen:400,300,700' rel='stylesheet' type='text/css' lang="english"/>
     <link href="css/style_supersmiles_main.css" rel="stylesheet" type="text/css" lang="english"/>
     <link href="css/style_supersmiles_hkdesign.css" rel="stylesheet" type="text/css" lang="english"/>
+    <link href="css/style_supermiles_services.css" rel="stylesheet" type="text/css" lang="english"/>
     
 <!-- Lightbox2 PhotoGallery - source: http://lokeshdhakar.com/projects/lightbox2/ -->
     <link href="js_lightbox/css/lightbox.css" rel="stylesheet" />
