--- a/about.html
+++ b/about.html
@@ -38,7 +38,7 @@
 
 <div id="wrapper">
     <header>
-        <a href="index.html" alt="Super Smiles Homepage" title="Super Smiles Homepage"><img id="logo" src="images/universal/logos/SuperSmilesLogo_Website_Dropshadow.png"/></a>
+       <a href="index.html" alt="Home page for Super Smiles Dental located in Burlington, Massachusetts." title="Home page for Super Smiles Dental located in Burlington, Massachusetts."><img id="logo" src="images/universal/logos/SuperSmilesDental_Logo_Website_Dropshadow_FINAL4b.png"/></a>
       
     
         <nav>
