--- a/patient-resources.html
+++ b/patient-resources.html
@@ -94,7 +94,7 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
 				<p>We also participate in the Universal Dental Plan.  If you do not see your insurance here, call or email us.  We most likely do accept your insurance.</p>
                 <p>If you do not have dental insurance or if your dental insurance plan does not cover any part of your dental treatment, we can help you identify the financing options available to you, and discuss which may be most appropriate for your particular needs.</p>
                 <h2>Scheduling</h2>
-                <p>To request an appointment, please call:  781-272-1288</p>
+                <p>To request an appointment, please call:  <a href="tel:7812721288">781.272.1288</a></p>
 				<p>Or email us at: <a href="mailto:appointments@supersmilesburlington.com" alt="Make an appointment: Email us at appointments@supersmilesburlington.com" title="Make an appointment: Email us at appointments@supersmilesburlington.com">appointments@supersmilesburlington.com</a>. </p>
 				<p>Our office will schedule your appointment as promptly as possible.</p>
             </article>
