Changed language of insurance information.

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -82,16 +82,20 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
                 <h2>Emergency/Problem Focused Visit</h2>
                 <p>Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may treat the pain or the problem immediately. She may also prescribe pain medicine to help you feel more comfortable until you receive definitive treatment.</p>
                 <h2>Dental Insurance</h2>
-                <p>We accept most major dental insurances, including: 
+                <p>We work with <mark>ALL</mark> dental insurances and have in-network relationships with major insurances including: 
 					<ul>
-						<li>Delta Dental</li>
+						<li>Aetna</li>
 						<li>Blue Cross Blue Shield</li>
-						<li>MetLife</li>
+						<li>Cigna</li>
+						<li>Delta Dental</li>
+						<li>DentaQuest</li>
 						<li>MassHealth (Medicaid)</li>
+						<li>MetLife</li>
 						<li>And many others</li>
 					</ul>
-				</p>
-				<p>We also participate in the Universal Dental Plan.  If you do not see your insurance here, call or email us.  We most likely do accept your insurance.</p>
+</p>
+<p>
+We work with providers and you to complete the necessary forms for any out-of-network insurance to ensure you receive all of your benefits under your policy.  We also participate in the Universal Dental Plan.  If you do not see your insurance here and would rest easier with confirmation, please call or email us.  Our Super Smiles Professionals can help you.</p>
                 <p>If you do not have dental insurance or if your dental insurance plan does not cover any part of your dental treatment, we can help you identify the financing options available to you, and discuss which may be most appropriate for your particular needs.</p>
                 <h2>Scheduling</h2>
                 <p>To request an appointment, please call:  <a href="tel:7812721288">781.272.1288</a></p>
