Added more insurances.

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -85,12 +85,15 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
                 <p>We work with <mark>ALL</mark> dental insurances and have in-network relationships with major insurances including: 
 					<ul>
 						<li>Aetna</li>
+						<li>Altus</li>
 						<li>Blue Cross Blue Shield</li>
 						<li>Cigna</li>
 						<li>Delta Dental</li>
 						<li>DentaQuest</li>
+						<li>Guardian</li>
 						<li>MassHealth (Medicaid)</li>
 						<li>MetLife</li>
+						<li>Scion</li>
 						<li>And many others</li>
 					</ul>
 </p>
