--- a/about.html
+++ b/about.html
@@ -84,7 +84,7 @@ With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinat
 "I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
 </p>
 <p>
-She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and there pug Rocco.  Ms. Sherzi enjoys reading and spending time with her loving family.  Her pet peeve is cleanliness.
+She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and their pug Rocco.  Ms. Sherzi enjoys reading and spending time with her loving family.  Her pet peeve is cleanliness.
 </p>
 
                     <p/>
