Fixed spelling of followup

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -80,7 +80,7 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
               	<h2>Treatment</h2>
                 <p>After your initial visit, you will schedule an appointment on another day for any procedure you may need according to your treatment plan. Occasionally, treatment can be done on the same day as the initial visit if there is enough time allowed.</p>
                 <h2>Emergency/Problem Focused Visit</h2>
-                <p>Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may provide treatment immediately to either provide an immediate remedy or mitigate your symptoms until your followup appointment when more time is available to provide a comprehenisve solution.</p>
+                <p>Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may provide treatment immediately to either provide an immediate remedy or mitigate your symptoms until your follow-up appointment when more time is available to provide a comprehenisve solution.</p>
                 <h2>Dental Insurance</h2>
                 <p>We work with <mark>ALL</mark> dental insurances and have in-network relationships with major insurances including: 
 					<ul>
