--- a/about.html
+++ b/about.html
@@ -73,7 +73,7 @@
                 <img class="dr-miller" src="images/about/DSC_0186_rt_400x321.jpg" title="Photo of Dr. Miller." alt="Photo of Dr. Miller." /> 
                 <p>Dr. Miller practiced in several locations in Massachusetts before establishing her own dental practice in Burlington, MA. Dr. Miller graduated Cum Laude from Boston University Goldman School of Dentistry in 2005 and started her dental career in underserved communities in Roxbury and Dorchester.  In 2006, she was appointed to the position of Director of the Dental Department at Geiger-Gibson Community Health Center.  During her two year directorship, Dr. Miller also taught students of dental medicine on their externship rotation, earning the title of Assistant Clinical Professor at Boston University Goldman School of Dentistry and Harvard School of Dental Medicine.</p>
                 <p>Dr. Miller keeps her skills and knowledge up to date on advancements in general dentistry and dental technologies by regularly attending seminars that involve multidisciplinary treatment planning. She is an active member of the <a href="http://www.massdental.org" alt="Click here to go to the Massachusetts Dental Society website." title="Click here to go to the Massachusetts Dental Society website." target="_blank">Massachusetts Dental Society</a> and the <a href="http://www.ada.org" alt="Click here to go to the American Dental Association website." title="Click here to go to the American Dental Association website." target="_blank">American Dental Association</a>.</p>
-                <p>Dr. Miller grew up in Montreal, Canada and is fluent in both English and French. In her spare time, she enjoys reading, hiking the White Mountains in New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.</p>
+                <p>Dr. Miller was born and raised in Montreal, Canada, and is fluent in both English and French. In her spare time, she enjoys reading, hiking the White Mountains in New Hampshire, ballroom dancing and getting her beloved husband fat by baking delicious desserts. Her pet peeve is proper spelling.</p>
                 
                               <h1 class="padding">Patient Care Coordinator Anne-Marie Sherzi</h1>
                 <img src="images/about/DSC_0081_rt_400x321.jpg" title="Photo of staff member 1." alt="Photo of staff member 1." />
@@ -84,7 +84,7 @@ With over 30 years of experience, Ms. Sherzi is an expert Patient Care Coordinat
 "I love my job!  I love meeting new people, people in person.  The best part of my job is getting to help people; help them get healthy, look healthy, and feel healthy."
 </p>
 <p>
-She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and their pug Rocco.  Ms. Sherzi enjoys reading, spending time with her loving family, and watching the New England Patriots: "Go Patriots!"  Her pet peeve is cleanliness.
+She is a native of Massachusetts and proudly sports a husband of 21 years, 2 children, and their pug Rocco.  Ms. Sherzi enjoys reading, spending time with her loving family, and watching the New England Patriots: "Go Pats!"  Her pet peeve is cleanliness.
 </p>
 
                     <p/>
