Changed Medicare to Medicaid

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -92,7 +92,7 @@ medical conditions that may be of concern prior to dental treatment (i.e. high b
 						<li>DentaQuest</li>
 						<li>Guardian</li>
 						<li>MassHealth</li>
-						<li>Medicare</li>
+						<li>Medicaid</li>
 						<li>MetLife</li>
 						<li>Scion</li>
 						<li>And many others</li>
