Changed insurance information and ordering.

--- a/patient-resources.html
+++ b/patient-resources.html
@@ -77,27 +77,28 @@
 medical conditions that may be of concern prior to dental treatment (i.e. high blood pressure, previous heart surgery, allergies to medicine, etc.)</li>
 					<li>Your dental insurance information</li>
                 </ul>
-              	<h2>Treatment</h2>
+                <h2>Dental Insurance</h2>
+                <p>We work with all dental insurances and have in-network relationships with major insurances including:</p> 
+						<ul>
+							<li>Aetna</li>
+							<li>Altus</li>
+							<li>Blue Cross Blue Shield</li>
+							<li>Cigna</li>
+							<li>Delta Dental</li>
+							<li>DentaQuest</li>
+							<li>Guardian</li>
+							<li>MassHealth</li>
+							<li>Medicaid</li>
+							<li>MetLife</li>
+							<li>Scion</li>
+							<li>And many others</li>
+						</ul>
+					
+					<h2>Treatment</h2>
                 <p>After your initial visit, you will schedule an appointment on another day for any procedure you may need according to your treatment plan. Occasionally, treatment can be done on the same day as the initial visit if there is enough time allowed.</p>
                 <h2>Emergency/Problem Focused Visit</h2>
                 <p>Should you experience pain or have an emergency situation, we will make every effort to see you that day. Dr. Miller may prescribe one or two xrays of the area in question to help with the diagnosis. If time allows, Dr. Miller may provide treatment immediately to either provide an immediate remedy or mitigate your symptoms until your follow-up appointment when more time is available to provide a comprehenisve solution.</p>
-                <h2>Dental Insurance</h2>
-                <p>We work with <mark>ALL</mark> dental insurances and have in-network relationships with major insurances including: 
-					<ul>
-						<li>Aetna</li>
-						<li>Altus</li>
-						<li>Blue Cross Blue Shield</li>
-						<li>Cigna</li>
-						<li>Delta Dental</li>
-						<li>DentaQuest</li>
-						<li>Guardian</li>
-						<li>MassHealth</li>
-						<li>Medicaid</li>
-						<li>MetLife</li>
-						<li>Scion</li>
-						<li>And many others</li>
-					</ul>
-</p>
+
 <p>
 We work with providers and you to complete the necessary forms for any out-of-network insurance to ensure you receive all of your benefits under your policy.  We also participate in the Universal Dental Plan.  If you do not see your insurance here and would rest easier with confirmation, please call or email us.  Our Super Smiles Professionals can help you.</p>
                 <p>If you do not have dental insurance or if your dental insurance plan does not cover any part of your dental treatment, we can help you identify the financing options available to you, and discuss which may be most appropriate for your particular needs.</p>
