Added blizzard warning.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,15 @@
     <div id="content-area">
         <div id="main-content">
             <article>
+                <h2>Blizzard Closure</h2>
+                <p>
+                	Super Smiles Dental of Burlington will be closed tomorrow 27JAN2015 due to the pending blizzard in our area.  
+                	We will be open Wednesday 28JAN2015 weather permitting.  Your safety is our number-one concern.  
+                	Should conditions for Wednesday be unsafe, we will contact all patients to adjust appointments to more favorable dates.  
+                </p>
+                <p>
+                	Be safe, and please be sure to check on your neighbors, especially the infirm and elderly during this extraordinary weather event.
+                </p>
                 <h1>Welcome to Super Smiles Dental</h1>
                 <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
                 <p>
