--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <article>
                 <h2>Super Smiles Dental is Open</h2>
                 <p>
-                	Super Smiles Dental of Burlington will be open and treating patients today, 28JAN2015, from 10 am until  pm.  Your safety is our number-one concern.  
+                	Super Smiles Dental of Burlington will be open and treating patients today, 28JAN2015, from 10 am until  3 pm.  Your safety is our number-one concern.  
                 	Should conditions today be unsafe for you, please call us to reschedule your appointment to a more favourable date.  
                 </p>
                 <h1>Welcome to Super Smiles Dental</h1>
