Added training message and fixed keyword cosmetic in metadata.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta content="super smiles burlington, massachusetts, family dentistry, doctor emilie miller dmd, american dental association, massachusetts dental society, preventive dentistry, cosmentic dentistry, general dentistry, teeth, comprehensive dental care, convenient location near the burlington mall, personalized dental care, professional dental care, affordable dental care, comprehensive dental treatment plan options, dental insurance accepted, dentist, super smiles are healthy smiles, super smiles homepage, learn about super smiles burlington" name="keywords">
+    <meta content="Lexington, Burlington, Woburn, Arlington, super smiles burlington, massachusetts, family dentistry, doctor emilie miller dmd, american dental association, massachusetts dental society, preventive dentistry, cosmetic dentistry, general dentistry, teeth, comprehensive dental care, convenient location near the burlington mall, personalized dental care, professional dental care, affordable dental care, comprehensive dental treatment plan options, dental insurance accepted, dentist, super smiles are healthy smiles, super smiles homepage, learn about super smiles burlington" name="keywords">
 <meta content="Super Smiles is a family dental practice located in Burlington, Massachusetts. Super Smiles offers comprehensive, personalized dental care such as general, cosmetic and preventive treatments." name="description">
 
     <title>Super Smiles Family Dentistry</title>
@@ -75,10 +75,18 @@
                 	Super Smiles Dental of Burlington will be open and treating patients today, 28JAN2015, from 10 am until  3 pm.  Your safety is our number-one concern.  
                 	Should conditions today be unsafe for you, please call us to reschedule your appointment to a more favourable date.  
                 </p>
+				<h2>Super Smiles Dental Closed For Training from 29JAN2015 until 31JAN2015</h2>
+                <p>
+                	All Super Smiles Dental professionals are attending training from 29JAN2015 until 31JAN2015.  
+					Regular training ensures we provide you with the safest and highest quality care possible.
+					Our office will return your calls  to answer any questions and to schedule your appointments.	
+					We apologize for the inconvenience and look forward to seeing you next week to share what 
+					we have learned and to apply our new skills to ensure you receive the best care possible.
+                </p>
                 <h1>Welcome to Super Smiles Dental</h1>
                 <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
                 <p>
-                Super Smiles Dental of Burlington is a state-of-the-art Dental Health Care Provider serving Burlington, Lexington, Woburn and surrounding areas.  Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children are welcome at Super Smiles Dental.
+                Super Smiles Dental of Burlington is a state-of-the-art Dental Health Care Provider serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children are welcome at Super Smiles Dental.
                 </p>
                 <p>
                 At Super Smiles Dental, we believe that maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to making your visit the most informed, comfortable and personable experience possible. <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.  Using extensive medical expertise and experience in conjunction with the latest array of dental technologies and information systems, Dr. Miller will craft <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive dental care options</a> that restore and improve your oral health, brighten your smile and fit within your financial goals. 
