--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
                 <p>
                 	All Super Smiles Dental professionals are attending training from 29JAN2015 until 31JAN2015.  
 					Regular training ensures we provide you with the safest and highest quality care possible.
-					Our office will return your calls  to answer any questions and to schedule your appointments.	
+					<mark>Our office will return your calls  to answer any questions and to schedule your appointments.</mark>	
 					We apologize for the inconvenience and look forward to seeing you next week to share what 
 					we have learned and to apply our new skills to ensure you receive the best care possible.
                 </p>
