Added credit card symbols to patient resources page and fixed some typos.

--- a/services-general.html
+++ b/services-general.html
@@ -55,7 +55,7 @@
         </div>
         
         <div id="slideshow">
-        	<img src='images/universal/slideshow/SeniorFemale_1024x440.jpg' alt="Heathly smiles for life." title="Heathly smiles for life." width="1024" height="440"/>
+        	<img src='images/universal/slideshow/SeniorFemale_1024x440.jpg' alt="Healthy smiles for life." title="Healthy smiles for life." width="1024" height="440"/>
             <img src='images/universal/slideshow/YoungMale_1024x440.jpg' alt="Personalized and comprehensive dental care." title="Personalized and comprehensive dental care." width="1024" height="440"/>
             <img src='images/universal/slideshow/YoungFemale_1024x440.jpg' alt="Beautiful smiles for family, career and life." title="Beautiful smiles for family, career and life." width="1024" height="440"/>
             <img src='images/universal/slideshow/SeniorCouple_1024x440.jpg' alt="A healthy smile for a healthy life." title="A healthy smile for a healthy life." width="1024" height="440"/>
