--- a/contact-us.html
+++ b/contact-us.html
@@ -59,7 +59,7 @@
             <img src='images/universal/slideshow/YoungFemale_1024x440.jpg' alt="Beautiful smiles for family, career and life." title="Beautiful smiles for family, career and life." width="1024" height="440"/>
             <img src='images/universal/slideshow/SeniorCouple_1024x440.jpg' alt="A healthy smile for a healthy life." title="A healthy smile for a healthy life." width="1024" height="440"/>
             <img src='images/universal/slideshow/Child_1024x440.jpg' alt="Comprehensive dental care for your entire family." title="Comprehensive dental care for your entire family." width="1024" height="440"/>
-            <img src='images/universal/slideshow/SeniorFemale_1024x440.jpg' alt="Heathly smiles for life." title="Heathly smiles for life." width="1024" height="440"/>
+            <img src='images/universal/slideshow/SeniorFemale_1024x440.jpg' alt="Healthy smiles for life." title="Healthy smiles for life." width="1024" height="440"/>
     	</div>
         <div id="includeTopBar"></div>
     </header>
