--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
             <article>
                 <h2>Closed for Another Winter Storm</h2>
                 <p>
-                    Super Smiles Dental of Burlington is closed tomorrow Monday February 2nd due to snow.
+                    Super Smiles Dental of Burlington is closed today Monday February 2nd due to snow.
                     <mark>We are accepting appointment requests by phone and email</mark>, and will return 
                         your calls and emails in a timely manner.  Thank you for your patience as we enjoy another
                         spectacle of mother nature.  
