Removed storm closer.

--- a/index.html
+++ b/index.html
@@ -70,14 +70,16 @@
     <div id="content-area">
         <div id="main-content">
             <article>
-                <h2>Closed for Another Winter Storm</h2>
-                <p>
-                    Super Smiles Dental of Burlington is closed today Monday February 2nd due to snow.
-                    <mark>We are accepting appointment requests by phone and email</mark>, and will return 
-                        your calls and emails in a timely manner.  Thank you for your patience as we enjoy another
-                        spectacle of mother nature.  
-                        <h3>GO PATS!!!</h3>
+            	 <!--
+	                <h2>Closed for Winter Storm</h2>
+	                <p>
+	                    Super Smiles Dental of Burlington is closed today Monday February 2nd due to snow.
+	                    <mark>We are accepting appointment requests by phone and email</mark>, and will return 
+	                        your calls and emails in a timely manner.  Thank you for your patience as we enjoy another
+	                        spectacle of mother nature.  
+	                        <h3>GO PATS!!!</h3>
                 </p>
+                -->
                 <h1>Welcome to Super Smiles Dental</h1>
                 <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
                 <p>
