Added sub headers.

--- a/index.html
+++ b/index.html
@@ -79,18 +79,59 @@
 	                        spectacle of mother nature.... yet again.
                     </p>
                 -->
-                <h1>Welcome to Super Smiles Dental</h1>
+                <h1>
+					Welcome to Super Smiles Dental
+				</h1>
                 <img src="images/home/Family_600x331.jpg" alt="Image of Family" title="Image of Family"/>
+				<h2>
+					Who We Are
+				</h2>
+				<h3>
+					Your Community Dental Health Center
+				</h3>
                 <p>
-                Super Smiles Dental of Burlington is a state-of-the-art Dental Health Care Provider serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, children, all are welcome at Super Smiles Dental.
-                </p>
+					Super Smiles Dental of Burlington is a state-of-the-art Dental Health Care Provider serving Arlington, Burlington, Lexington, Woburn and surrounding areas.  
+				</p>
+				<p>
+					Our mission is to provide high quality affordable dental health care to all members of our community.  Seniors, young adults, and children; all are welcome at Super Smiles Dental.  
+				</p>
+				<h2>
+					What We Do
+				</h2>
+				<h3>
+					Provide Superior Quality Dental Health Care  
+				</h3>
                 <p>
-                At Super Smiles Dental, we believe that maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to making your visit the most informed, comfortable and personable experience possible. <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.  Using extensive medical expertise and experience in conjunction with the latest array of dental technologies and information systems, Dr. Miller will craft <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive dental care options</a> that restore and improve your oral health, brighten your smile and fit within your financial goals. 
+					At Super Smiles Dental, we believe that maintaining good oral health with a beautiful smile is essential to maintaining a healthy  and successful life.  Our <a href="about.html" alt="Meet the Team: Click to learn more about our staff." title="Meet the Team: Click to learn more about our staff.">professional staff</a> is committed to making your visit the most informed, comfortable and personable experience possible. <a href="about.html" alt="Meet Dr. Miller: Click to read Dr. Miller's bio." title="Meet Dr. Miller: Click to read Dr. Miller's bio.">Dr. Miller</a> will instantly make you feel at ease with a gentle and expert approach to providing the quality care you deserve.  Dr. Miller ensures you are well informed through the course of your dental treatment discussing all challenges, their remedies, and the next steps most appropriate for your specific personal needs.  
+				</p>
+				<p>
+					Using extensive medical expertise and experience in conjunction with the latest array of dental technologies and information systems, Dr. Miller will craft <a href="services.html" alt="Services: Click for detailed information about our dental services." title="Services: Click for detailed information about our dental services.">comprehensive dental care options</a> that restore and improve your oral health, brighten your smile and fit within your financial goals. 
                 </p>
-                <p><a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">We work with all insurance providers and we proudly accept MassHealth.</a>
+				<h2>
+					Insurance
+				</h2>
+				<h3>
+					All Insurances Accepted
+				</h3>
+                <p>
+					<a href="patient-resources.html" alt="Patient Resources: Click to learn about payment options and accepted insurance providers." title="Patient Resources: Click to learn about payment options and accepted insurance providers.">We work with all insurance providers and we proudly accept MassHealth.</a>
                 </p>
+				<h2>
+					Our Location
+				</h2>
+				<h3>
+					Super Convenient Location near Market Basket
+				</h3>
                 <p>Super Smiles Dental is <a href="https://maps.google.com/maps?q=54+Middlesex+Turnpike,+Suite+104,+Burlington,+MA+01803&hl=en&ll=42.472793,-71.212971&spn=0.008958,0.013304&sll=37.0625,-95.677068&sspn=39.320439,60.732422&hnear=54+Middlesex+Turnpike+%23104,+Burlington,+Massachusetts+01803&t=m&z=16" alt="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." title="Our office is located at 54 Middlesex Turnpike, Suite 104, Burlington, MA 01803. Click to view our location on Google Maps." target="_blank">conveniently located</a> a short distance away from the Burlington Mall and technology companies, across the street from Trader Joes and Market Basket; allowing you to plan your visit around your meeting schedule, shopping, and errands.</p>
-                <p>To experience the superior quality of Super Smiles Dental, make your appointment today and call us at:   <a href="tel:7812721288">781.272.1288</a></p>
+                <h2>
+					Contact Us 
+				</h2>
+				<h3>
+					781.272.1288
+					<br/>
+					appointments@supersmilesburlington.com
+				</h3>
+				<p>To experience the superior quality of Super Smiles Dental, make your appointment today and call us at:   <a href="tel:7812721288">781.272.1288</a></p>
                 <p>We look forward to hearing from you.</p>
                 <h3 class="tagline">Super Smiles! Beautiful smiles for family, career, and life!</h3>
             </article>
