Added masshealth to meta keywords and also changed order of insurance information on patient resources.

--- a/services-general.html
+++ b/services-general.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
-    <meta content="super smiles burlington, massachusetts, family dentistry, doctor emilie miller dmd, american dental association, massachusetts dental society, preventive dentistry, cosmetic dentistry, general dentistry, teeth, comprehensive dental care, convenient location near the burlington mall, personalized dental care, professional dental care, affordable dental care, comprehensive dental treatment plan options, dental insurance accepted, dentist, super smiles are healthy smiles, about super smiles, learn about super smiles burlington, meet doctor miller" name="keywords">
+    <meta content="masshealth, masshealth dentist, super smiles burlington, massachusetts, family dentistry, doctor emilie miller dmd, american dental association, massachusetts dental society, preventive dentistry, cosmetic dentistry, general dentistry, teeth, comprehensive dental care, convenient location near the burlington mall, personalized dental care, professional dental care, affordable dental care, comprehensive dental treatment plan options, dental insurance accepted, dentist, super smiles are healthy smiles, about super smiles, learn about super smiles burlington, meet doctor miller" name="keywords">
 <meta content="Super Smiles general treatment services information." name="description">
     <title>Services: General Treatment, Preventive Treatment, Cosmetic Treatment - Super Smiles Family Dentistry</title>
     
